--- a/ToDoListT2/ToDoListT2.csproj
+++ b/ToDoListT2/ToDoListT2.csproj
@@ -76,6 +76,7 @@
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Login.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
